# harvest-auto-timesheet

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-update.yml  ci.yml
harvest_auto_timesheet/: __main__.py  context.py  gcal.py  harvest.py  pagerd.py  schedule.py  tasks.py  util.py
scripts/: delete.py
tests/: conftest.py
tests/data_files/: id_rsa
tests/unit/: test_context.py  test_gcal.py  test_harvest.py  test_util.py
