[project]
name = "harvest-auto-timesheet"
version = "0.0.1"
readme = "README.md"
description = "A package for automating timesheet generation using Harvest API"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies"]
authors = [
    {name = "Campbell Whitworth", email = "campbell.whitworth@fingermarkglobal.com"},
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://fingermarkglobal.harvestapp.com"
Repository = "https://fingermarkglobal.harvestapp.com"

[tool.setuptools.packages.find]
include = ["harvest_auto_timesheet*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
major_version_zero = false

[tool.ruff]
line-length = 88
lint.extend-select = ["ALL"]
lint.ignore = [
    "A005",
    "ANN002",
    "ANN003",
    "ANN401",
    "COM812",
    "D1",
    "D203",
    "D211",
    "D213",
    "D407",
    "EM",
    "ERA",
    "ISC001",
    "S",
    "TRY",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "INP001",
    "ANN201",
]

"scripts/**/*.py" = [
    "INP001",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
strict = true
files = [
    "harvest_auto_timesheet",
    "tests",
]
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'tests.*'
disable_error_code = "var-annotated"

[tool.pytest.ini_options]
addopts = "--cov=harvest_auto_timesheet --cov=tests --cov-report term --cov-config=pyproject.toml"
required_plugins = ["pytest-cov"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
fail_under = 50
sort = "cover"
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:"
]
omit = [
    "__main__.py",
]
